# Graphics-Project-work-2025

./: .gitignore  CMakeLists.txt  README.md  build.sh  convert_equirectangular_to_cubemap.py  split_cubemap.py
shaders/: box.frag  box.vert  butterfly.frag  butterfly.vert  vertex_shader.vert
src/: box.cpp  box.h  butterfly.cpp  butterfly.h  logger.cpp  logger.h  main.cpp  obj_loader.cpp  obj_loader.h  shader.h  shader_fwd.h  shader_manager.cpp  shader_manager.h  skybox.cpp  skybox.h  stb_image_wrapper.h  text_renderer.cpp  text_renderer.h
textures/skybox/: README.md
